--- a/app/components/body-components/testimonial.html
+++ b/app/components/body-components/testimonial.html
@@ -1,9 +1,6 @@
 <div class="testimonial-grid-container">
   <div class="testimonial">
     <h1>Community Science Museum</h1>
-    <!--<h5>-->
-      <!--<small><i>Explore togethe</i></small>-->
-    <!--</h5>-->
     <p class="fs-italic">Explore togethe</p>
     <p>
       Come join us at the Community Science Museum where we’re committed to making science
@@ -19,28 +16,18 @@
     </p>
   </div>
   <div class="testimonial-box-1">
-    <a  class="testimonial-button" href="/exhibition.html#section-box1">
-      Cosmology
-    </a>
+    <a class="testimonial-button" href="/exhibition.html#section-box1"> Cosmology </a>
   </div>
   <div class="testimonial-box-2">
-    <a class="testimonial-button" href="/exhibition.html#section-box2"> 
-      Evolution
-    </a>
+    <a class="testimonial-button" href="/exhibition.html#section-box2"> Evolution </a>
   </div>
   <div class="testimonial-box-3">
-    <a class="testimonial-button" href="/exhibition.html#section-box3">
-      Robotics and AI
-    </a>
+    <a class="testimonial-button" href="/exhibition.html#section-box3"> Robotics and AI </a>
   </div>
   <div class="testimonial-box-4">
-    <a class="testimonial-button" href="/exhibition.html#section-box4">
-      Biology & Medicine
-    </a>
+    <a class="testimonial-button" href="/exhibition.html#section-box4"> Biology & Medicine </a>
   </div>
   <div class="testimonial-box-5">
-    <a class="testimonial-button" href="/exhibition.html#section-box5">
-      Ecology
-    </a>
+    <a class="testimonial-button" href="/exhibition.html#section-box5"> Ecology </a>
   </div>
 </div>
