--- a/app/components/forms/internships-form-1.html
+++ b/app/components/forms/internships-form-1.html
@@ -2,18 +2,12 @@
   <div class="community-form-grid-container box-container">
     <div class="community-form-box hedder-box-grid-center">
       <h2>Internships</h2>
-      <!--<small
-        ><i>
-          Are you interested in working in a museum? Do you enjoy the fun and excitement of sharing
-          the wonders of nature with people? Well you could be just the right person to enjoy an
-          internship at the museum. You’ll be learning from a number of different academics and
-          people who are passionate about science and sharing it with the wider community.
-        </i></small
-      >-->
-      <p>Are you interested in working in a museum? Do you enjoy the fun and excitement of sharing
+      <p>
+        Are you interested in working in a museum? Do you enjoy the fun and excitement of sharing
         the wonders of nature with people? Well you could be just the right person to enjoy an
-        internship at the museum. You’ll be learning from a number of different academics and
-        people who are passionate about science and sharing it with the wider community.</p>
+        internship at the museum. You’ll be learning from a number of different academics and people
+        who are passionate about science and sharing it with the wider community.
+      </p>
     </div>
     <div class="community-form-box-1 box-grid-center">
       <input type="text" name="name" placeholder="Name" />
