--- a/app/components/shops/shop.html
+++ b/app/components/shops/shop.html
@@ -2,17 +2,14 @@
   <div class="shop-box-1">
     <div class="product-box">
       <div class="product-box-layer">
-        <!--<div class="product-box-front-layer product-box-img" alt="produckt img"></div>-->
         <div class="product-box-front-layer">
-          <img class="product-box-img" alt="coming soon img" src="../../media/aspect.webp">
+          <img class="product-box-img" alt="coming soon img" src="../../media/aspect.webp" />
         </div>
         <div class="product-box-back-layer">
-            <label class="lbl-soldout">New</label>
+          <label class="lbl-soldout">New</label>
           <h1>xxxx</h1>
           <br />
-          <p>
-            xxxx 
-          </p>
+          <p>xxxx</p>
           <br />
           <p>kr xxxx</p>
           <br />
@@ -24,21 +21,18 @@
   <div class="shop-box-2">
     <div class="product-box">
       <div class="product-box-layer">
-        <!--<div class="product-box-front-layer product-box-img-2"></div>-->
         <div class="product-box-front-layer">
-          <img class="product-box-img-2" alt="coming soonimg" src="../../media/aspect.webp">
+          <img class="product-box-img-2" alt="coming soonimg" src="../../media/aspect.webp" />
         </div>
         <div class="product-box-back-layer">
-            <label class="lbl-soldout">New</label>
-            <h1>xxxx</h1>
-            <br />
-            <p>
-              xxxx 
-            </p>
-            <br />
-            <p>kr xxxxx</p>
-            <br />
-            <p>xxxx</p>
+          <label class="lbl-soldout">New</label>
+          <h1>xxxx</h1>
+          <br />
+          <p>xxxx</p>
+          <br />
+          <p>kr xxxxx</p>
+          <br />
+          <p>xxxx</p>
         </div>
       </div>
     </div>
@@ -46,21 +40,18 @@
   <div class="shop-box-3">
     <div class="product-box">
       <div class="product-box-layer">
-        <!--<div class="product-box-front-layer product-box-img-3"></div>-->
         <div class="product-box-front-layer">
-          <img class="product-box-img-3" alt="coming soon img" src="../../media/aspect.webp">
+          <img class="product-box-img-3" alt="coming soon img" src="../../media/aspect.webp" />
         </div>
         <div class="product-box-back-layer">
-            <label class="lbl-soldout">New</label>
-            <h1>xxxx</h1>
-            <br />
-            <p>
-              xxxx 
-            </p>
-            <br />
-            <p>kr xxxxx</p>
-            <br />
-            <p>xxxx</p>
+          <label class="lbl-soldout">New</label>
+          <h1>xxxx</h1>
+          <br />
+          <p>xxxx</p>
+          <br />
+          <p>kr xxxxx</p>
+          <br />
+          <p>xxxx</p>
         </div>
       </div>
     </div>
@@ -68,21 +59,18 @@
   <div class="shop-box-4">
     <div class="product-box">
       <div class="product-box-layer">
-        <!--<div class="product-box-front-layer product-box-img-4"></div>-->
         <div class="product-box-front-layer">
-          <img class="product-box-img-4" alt="coming soon img" src="../../media/aspect.webp">
+          <img class="product-box-img-4" alt="coming soon img" src="../../media/aspect.webp" />
         </div>
         <div class="product-box-back-layer">
-            <label class="lbl-soldout">Sold Out</label>
-            <h1>xxxx</h1>
-            <br />
-            <p>
-              xxxx 
-            </p>
-            <br />
-            <p>kr xxxx</p>
-            <br />
-            <p>xxxx</p>
+          <label class="lbl-soldout">Sold Out</label>
+          <h1>xxxx</h1>
+          <br />
+          <p>xxxx</p>
+          <br />
+          <p>kr xxxx</p>
+          <br />
+          <p>xxxx</p>
         </div>
       </div>
     </div>
@@ -90,21 +78,18 @@
   <div class="shop-box-5">
     <div class="product-box">
       <div class="product-box-layer">
-        <!--<div class="product-box-front-layer product-box-img-5"></div>-->
         <div class="product-box-front-layer">
-          <img class="product-box-img-5" alt="coming soon img" src="../../media/aspect.webp">
+          <img class="product-box-img-5" alt="coming soon img" src="../../media/aspect.webp" />
         </div>
         <div class="product-box-back-layer">
-            <label class="lbl-soldout">New</label>
-            <h1>xxxx</h1>
-            <br />
-            <p>
-              xxxx 
-            </p>
-            <br />
-            <p>kr xxxxx</p>
-            <br />
-            <p>xxxx</p>
+          <label class="lbl-soldout">New</label>
+          <h1>xxxx</h1>
+          <br />
+          <p>xxxx</p>
+          <br />
+          <p>kr xxxxx</p>
+          <br />
+          <p>xxxx</p>
         </div>
       </div>
     </div>
@@ -112,21 +97,18 @@
   <div class="shop-box-6">
     <div class="product-box">
       <div class="product-box-layer">
-        <!--<div class="product-box-front-layer product-box-img-6"></div>-->
         <div class="product-box-front-layer">
-          <img class="product-box-img-6" alt="coming soon img" src="../../media/aspect.webp">
+          <img class="product-box-img-6" alt="coming soon img" src="../../media/aspect.webp" />
         </div>
         <div class="product-box-back-layer">
-            <label class="lbl-soldout">New</label>
-            <h1>xxxx</h1>
-            <br />
-            <p>
-              xxxx 
-            </p>
-            <br />
-            <p>kr xxxxx</p>
-            <br />
-            <p>xxxx</p>
+          <label class="lbl-soldout">New</label>
+          <h1>xxxx</h1>
+          <br />
+          <p>xxxx</p>
+          <br />
+          <p>kr xxxxx</p>
+          <br />
+          <p>xxxx</p>
         </div>
       </div>
     </div>
@@ -134,21 +116,18 @@
   <div class="shop-box-7">
     <div class="product-box">
       <div class="product-box-layer">
-        <!--<div class="product-box-front-layer product-box-img-7"></div>-->
         <div class="product-box-front-layer">
-          <img class="product-box-img-7" alt="coming soon img" src="../../media/aspect.webp">
+          <img class="product-box-img-7" alt="coming soon img" src="../../media/aspect.webp" />
         </div>
         <div class="product-box-back-layer">
-            <label class="lbl-soldout">New</label>
-            <h1>xxxx</h1>
-            <br />
-            <p>
-              xxxx 
-            </p>
-            <br />
-            <p>kr xxxx</p>
-            <br />
-            <p>xxxx</p>
+          <label class="lbl-soldout">New</label>
+          <h1>xxxx</h1>
+          <br />
+          <p>xxxx</p>
+          <br />
+          <p>kr xxxx</p>
+          <br />
+          <p>xxxx</p>
         </div>
       </div>
     </div>
@@ -156,21 +135,18 @@
   <div class="shop-box-8">
     <div class="product-box">
       <div class="product-box-layer">
-        <!--<div class="product-box-front-layer product-box-img-8"></div>-->
         <div class="product-box-front-layer">
-          <img class="product-box-img-8" alt="coming soon img" src="../../media/aspect.webp">
+          <img class="product-box-img-8" alt="coming soon img" src="../../media/aspect.webp" />
         </div>
         <div class="product-box-back-layer">
-            <label class="lbl-soldout">New</label>
-            <h1>xxxx</h1>
-            <br />
-            <p>
-              xxxx 
-            </p>
-            <br />
-            <p>kr xxxx</p>
-            <br />
-            <p>xxxx</p>
+          <label class="lbl-soldout">New</label>
+          <h1>xxxx</h1>
+          <br />
+          <p>xxxx</p>
+          <br />
+          <p>kr xxxx</p>
+          <br />
+          <p>xxxx</p>
         </div>
       </div>
     </div>
@@ -178,21 +154,18 @@
   <div class="shop-box-9">
     <div class="product-box">
       <div class="product-box-layer">
-        <!--<div class="product-box-front-layer product-box-img-9"></div>-->
         <div class="product-box-front-layer">
-          <img class="product-box-img-9" alt="coming soon img" src="../../media/aspect.webp">
+          <img class="product-box-img-9" alt="coming soon img" src="../../media/aspect.webp" />
         </div>
         <div class="product-box-back-layer">
-            <label class="lbl-soldout">New</label>
-            <h1>xxxx</h1>
-            <br />
-            <p>
-              xxxx 
-            </p>
-            <br />
-            <p>kr xxxx</p>
-            <br />
-            <p>xxxx</p>
+          <label class="lbl-soldout">New</label>
+          <h1>xxxx</h1>
+          <br />
+          <p>xxxx</p>
+          <br />
+          <p>kr xxxx</p>
+          <br />
+          <p>xxxx</p>
         </div>
       </div>
     </div>
