--- a/app/components/body-components/info-box.html
+++ b/app/components/body-components/info-box.html
@@ -2,7 +2,6 @@
   <div class="bady-box-b-1">
     <div class="info-box-info-grid-container">
       <div class="body-box1-tital">
-        <!--<small><i>HOURS</i></small>-->
         <p class="small">HOURS</p>
       </div>
       <div class="body-box2-info-text">
@@ -43,12 +42,10 @@
       onclick="notCollapse ()"
       onkeyup="notCollapse ()"
     >
-      <!--<small class="collapse-x"><i>X</i></small>-->
       <p class="collapse-x">x</p>
-      <!--<small><i>The entrance is free for all. </i></small>-->
       <p class="small-btxt">The entrance is free for all.</p>
       <br />
-  </div>
+    </div>
     <div class="collapse-wrapper">
       <button class="collapse-button" href="" onclick="collapseX()" onkeyup="collapseX()">
         <span>GUIDED TOURS</span>
@@ -60,19 +57,13 @@
       onclick="notCollapseX()"
       onkeyup="notCollapseX()"
     >
-      <!--<small class="collapse-x"><i>X</i></small>-->
       <p class="collapse-x">x</p>
-      <!--<small
-        ><i
-          >There are guided tours of the museum that leave every hour. These tours are 70 NOK per
-          person and include a handy printed guide of the museum.
-          </i
-        ></small
-      >-->
-      <p class="small-btxt">There are guided tours of the museum that leave every hour. These tours are 70 NOK per
-        person and include a handy printed guide of the museum.</p>
+      <p class="small-btxt">
+        There are guided tours of the museum that leave every hour. These tours are 70 NOK per
+        person and include a handy printed guide of the museum.
+      </p>
       <br />
-  </div>
+    </div>
     <div class="collapse-wrapper">
       <button class="collapse-button" href="" onclick="collapseX1()" onkeyup="collapseX1()">
         <span>ORGANISE A GUIDED TOUR</span>
@@ -84,20 +75,18 @@
       onclick="notCollapseX1()"
       onkeyup="notCollapseX1()"
     >
-      <!--<small class="collapse-x-1"><i>X</i></small>-->
       <p class="collapse-x-1">x</p>
-      <!--<small
-        ><i
-          >If you would like to organise a guided tour for your group of 6 or more people, please
-          contact us to arrange the tour.
-            <a class="mail-button" href="mailto:CSM@example.com?cc=Suportmail@example.com,&subject=ORGANISE A GUIDED TOUR&body=Hi I would like to organise a guided tour for your group of 20 people! Is this possible, Monday the 19.09.23?">Contact Us</a>
-        </i>
-        </small>-->
-        <p class="small-btxt">If you would like to organise a guided tour for your group of 6 or more people, please
-          contact us to arrange the tour.
-            <a class="mail-button" href="mailto:CSM@example.com?cc=Suportmail@example.com,&subject=ORGANISE A GUIDED TOUR&body=Hi I would like to organise a guided tour for your group of 20 people! Is this possible, Monday the 19.09.23?">Contact Us</a></p>
-        <br />
-      </div>
+      <p class="small-btxt">
+        If you would like to organise a guided tour for your group of 6 or more people, please
+        contact us to arrange the tour.
+        <a
+          class="mail-button"
+          href="mailto:CSM@example.com?cc=Suportmail@example.com,&subject=ORGANISE A GUIDED TOUR&body=Hi I would like to organise a guided tour for your group of 20 people! Is this possible, Monday the 19.09.23?"
+          >Contact Us</a
+        >
+      </p>
+      <br />
+    </div>
     <div class="collapse-wrapper">
       <button class="collapse-button" href="" onclick="collapseX2()" onkeyup="collapseX2()">
         <span>ACCESSIBILITY</span>
@@ -109,18 +98,13 @@
       onclick="notCollapseX2()"
       onkeyup="notCollapseX2()"
     >
-      <!--<small class="collapse-x-2"><i>X</i></small>-->
       <p class="collapse-x-2">x</p>
-      <!--<small
-        ><i
-          >The museum has wheelchair accessibility ramps. It also has audio guides and braille
-          display signs for the visually impaired.</i
-        ></small
-      >-->
-      <p class="small-btxt">The museum has wheelchair accessibility ramps. It also has audio guides and braille
-        display signs for the visually impaired.</p>
+      <p class="small-btxt">
+        The museum has wheelchair accessibility ramps. It also has audio guides and braille display
+        signs for the visually impaired.
+      </p>
       <br />
-  </div>
+    </div>
   </div>
   <div class="body-box-b-3">
     <iframe
