--- a/app/components/body-components/signup.html
+++ b/app/components/body-components/signup.html
@@ -1,9 +1,6 @@
 <div class="signup-grid-container">
   <div class="signup-box-1">
     <h2>Get Involved</h2>
-    <!--<h5>-->
-      <!--<small><i>Support</i></small>-->
-    <!--</h5>-->
     <p>Support</p>
     <p>
       There are various ways you can support the museum. Donations are very welcome and are an
@@ -13,19 +10,10 @@
       Department and they will be able to assist you.
     </p>
   </div>
-  <div class="signup-box-2"><!-- grid-flex -->
-    <!--<button class="test-bottum">-->
-      <div class="grid-flex ">
-        <a  class="test-bottum" href="/community.html">
-          Volunteer
-        </a>
-      <!--</button>-->
-      <!--<button class="test-bottum">-->
-        
-          <a class="test-bottum" href="/community-1.html">
-            Internships
-          </a>
-        <!--</button>-->
-      </div>
+  <div class="signup-box-2">
+    <div class="grid-flex">
+      <a class="test-bottum" href="/community.html"> Volunteer </a>
+      <a class="test-bottum" href="/community-1.html"> Internships </a>
+    </div>
   </div>
 </div>
