--- a/app/components/footer.html
+++ b/app/components/footer.html
@@ -1,40 +1,32 @@
 <div class="footer-grid">
-    <div class="top-footer">
-        <div class="footer-container-grid">
-            <div class="footer-box-1">
-                <!--<a href="https://angry-benz-cc2cea.netlify.app/">
-                    <span>Compey</span>
-                </a>-->
-            </div>
-            <div class="footer-box-2">
-                <a href="/community.html">
-                    <span>Community</span>
-                </a>
-            </div>
-            <div class="footer-logo-box">
-                <a href="/index.html">
-                    <img
-                      src="../media/logo-5.webp"
-                      alt="Community Science Museum logo, a C"
-                      class="nav-logo"
-                    />
-                </a>
-            </div>
-            <div class="footer-box-3">
-                <a href="/help.html">
-                    <span>Help desk</span>
-                </a>
-            </div>
-            <div class="footer-box-4">
-                <!--<a href="https://angry-benz-cc2cea.netlify.app/">
-                    <span>Blog</span>
-                </a>-->
-            </div>
-          </div>
-    </div>
-    <div class="bottom-footer footer-border">
-        <a href="/index.html">
-            <span>&#169; Community Science Museum</span>
+  <div class="top-footer">
+    <div class="footer-container-grid">
+      <div class="footer-box-1"></div>
+      <div class="footer-box-2">
+        <a href="/community.html">
+          <span>Community</span>
         </a>
+      </div>
+      <div class="footer-logo-box">
+        <a href="/index.html">
+          <img
+            src="../media/logo-5.webp"
+            alt="Community Science Museum logo, a C"
+            class="nav-logo"
+          />
+        </a>
+      </div>
+      <div class="footer-box-3">
+        <a href="/help.html">
+          <span>Help desk</span>
+        </a>
+      </div>
+      <div class="footer-box-4"></div>
     </div>
+  </div>
+  <div class="bottom-footer footer-border">
+    <a href="/index.html">
+      <span>&#169; Community Science Museum</span>
+    </a>
+  </div>
 </div>
