--- a/app/components/shops/shop-2.html
+++ b/app/components/shops/shop-2.html
@@ -2,17 +2,14 @@
   <div class="shop-box-2-1">
     <div class="product-box">
       <div class="product-box-layer">
-        <!--<div class="product-box-front-layer product-box-img-2-1"></div>-->
         <div class="product-box-front-layer">
-          <img class="product-box-img-2-1" alt="produckt img" src="../../media/aspect.webp"> <!--class="product-box-img-2-1"-->
+          <img class="product-box-img-2-1" alt="produckt img" src="../../media/aspect.webp" />
         </div>
         <div class="product-box-back-layer">
-            <label class="lbl-soldout">Sold Out</label>
+          <label class="lbl-soldout">Sold Out</label>
           <h1>THE MOON</h1>
           <br />
-          <p>
-            A nice poster with the moon.
-          </p>
+          <p>A nice poster with the moon.</p>
           <br />
           <p>kr 186,75</p>
           <br />
@@ -24,17 +21,14 @@
   <div class="shop-box-2-2">
     <div class="product-box">
       <div class="product-box-layer">
-        <!--<div class="product-box-front-layer product-box-img-2-2"></div>-->
         <div class="product-box-front-layer">
-          <img class="product-box-img-2-2" alt="produckt img" src="../../media/aspect.webp">
+          <img class="product-box-img-2-2" alt="produckt img" src="../../media/aspect.webp" />
         </div>
         <div class="product-box-back-layer">
-            <label class="lbl-soldout">Sold Out</label>
+          <label class="lbl-soldout">Sold Out</label>
           <h1>SPACE SHUTTLE</h1>
           <br />
-          <p>
-            Cool poster for the children's room by spaceship.
-          </p>
+          <p>Cool poster for the children's room by spaceship.</p>
           <br />
           <p>kr 186,75</p>
           <br />
@@ -46,21 +40,18 @@
   <div class="shop-box-2-3">
     <div class="product-box">
       <div class="product-box-layer">
-        <!--<div class="product-box-front-layer product-box-img-2-3"></div>-->
         <div class="product-box-front-layer">
-          <img class="product-box-img-2-3" alt="produckt img" src="../../media/aspect.webp">
+          <img class="product-box-img-2-3" alt="produckt img" src="../../media/aspect.webp" />
         </div>
         <div class="product-box-back-layer">
-            <label class="lbl-soldout">Sold Out</label>
-            <h1>THE </h1>
-            <br />
-            <p>
-              A nice poster.
-            </p>
-            <br />
-            <p>kr 186,75</p>
-            <br />
-            <p>Size: 50x70</p>
+          <label class="lbl-soldout">Sold Out</label>
+          <h1>THE</h1>
+          <br />
+          <p>A nice poster.</p>
+          <br />
+          <p>kr 186,75</p>
+          <br />
+          <p>Size: 50x70</p>
         </div>
       </div>
     </div>
@@ -68,21 +59,18 @@
   <div class="shop-box-2-4">
     <div class="product-box">
       <div class="product-box-layer">
-        <!--<div class="product-box-front-layer product-box-img-2-4"></div>-->
         <div class="product-box-front-layer">
-          <img class="product-box-img-2-4" alt="produckt img" src="../../media/aspect.webp">
+          <img class="product-box-img-2-4" alt="produckt img" src="../../media/aspect.webp" />
         </div>
         <div class="product-box-back-layer">
-            <label class="lbl-soldout">Sold Out</label>
-            <h1>THE </h1>
-            <br />
-            <p>
-              A nice poster.
-            </p>
-            <br />
-            <p>kr 186,75</p>
-            <br />
-            <p>Size: 50x70</p>
+          <label class="lbl-soldout">Sold Out</label>
+          <h1>THE</h1>
+          <br />
+          <p>A nice poster.</p>
+          <br />
+          <p>kr 186,75</p>
+          <br />
+          <p>Size: 50x70</p>
         </div>
       </div>
     </div>
@@ -90,21 +78,18 @@
   <div class="shop-box-2-5">
     <div class="product-box">
       <div class="product-box-layer">
-        <!--<div class="product-box-front-layer product-box-img-2-5"></div>-->
         <div class="product-box-front-layer">
-          <img class="product-box-img-2-5" alt="produckt img" src="../../media/aspect.webp">
+          <img class="product-box-img-2-5" alt="produckt img" src="../../media/aspect.webp" />
         </div>
         <div class="product-box-back-layer">
-            <label class="lbl-soldout">Sold Out</label>
-            <h1>THE </h1>
-            <br />
-            <p>
-              A nice poster.
-            </p>
-            <br />
-            <p>kr 186,75</p>
-            <br />
-            <p>Size: 50x70</p>
+          <label class="lbl-soldout">Sold Out</label>
+          <h1>THE</h1>
+          <br />
+          <p>A nice poster.</p>
+          <br />
+          <p>kr 186,75</p>
+          <br />
+          <p>Size: 50x70</p>
         </div>
       </div>
     </div>
@@ -112,21 +97,18 @@
   <div class="shop-box-2-6">
     <div class="product-box">
       <div class="product-box-layer">
-        <!--<div class="product-box-front-layer product-box-img-2-6"></div>-->
         <div class="product-box-front-layer">
-          <img class="product-box-img-2-6" alt="produckt img" src="../../media/aspect.webp">
+          <img class="product-box-img-2-6" alt="produckt img" src="../../media/aspect.webp" />
         </div>
         <div class="product-box-back-layer">
-            <label class="lbl-soldout">Sold Out</label>
-            <h1>THE </h1>
-            <br />
-            <p>
-              A nice poster.
-            </p>
-            <br />
-            <p>kr 186,75</p>
-            <br />
-            <p>Size: 50x70</p>
+          <label class="lbl-soldout">Sold Out</label>
+          <h1>THE</h1>
+          <br />
+          <p>A nice poster.</p>
+          <br />
+          <p>kr 186,75</p>
+          <br />
+          <p>Size: 50x70</p>
         </div>
       </div>
     </div>
@@ -134,21 +116,18 @@
   <div class="shop-box-2-7">
     <div class="product-box">
       <div class="product-box-layer">
-        <!--<div class="product-box-front-layer product-box-img-2-7"></div>-->
         <div class="product-box-front-layer">
-          <img class="product-box-img-2-7" alt="produckt img" src="../../media/aspect.webp">
+          <img class="product-box-img-2-7" alt="produckt img" src="../../media/aspect.webp" />
         </div>
         <div class="product-box-back-layer">
-            <label class="lbl-soldout">Sold Out</label>
-            <h1>THE </h1>
-            <br />
-            <p>
-              A nice poster.
-            </p>
-            <br />
-            <p>kr 186,75</p>
-            <br />
-            <p>Size: 50x70</p>
+          <label class="lbl-soldout">Sold Out</label>
+          <h1>THE</h1>
+          <br />
+          <p>A nice poster.</p>
+          <br />
+          <p>kr 186,75</p>
+          <br />
+          <p>Size: 50x70</p>
         </div>
       </div>
     </div>
@@ -156,25 +135,18 @@
   <div class="shop-box-2-8">
     <div class="product-box">
       <div class="product-box-layer">
-        <!--<div class="product-box-front-layer product-box-img-2-8"></div>-->
         <div class="product-box-front-layer">
-          <!--<picture class="product-box-img-2-8">
-            <source srcset="../../media/skeleton.jpg 466w">
-            <img alt="produckt img" src="../../media/skeleton.webp">
-          </picture>-->
-          <img class="product-box-img-2-8" alt="produckt img" src="../../media/aspect.webp">
+          <img class="product-box-img-2-8" alt="produckt img" src="../../media/aspect.webp" />
         </div>
         <div class="product-box-back-layer">
-            <label class="lbl-soldout">Sold Out</label>
-            <h1>THE </h1>
-            <br />
-            <p>
-              A nice poster.
-            </p>
-            <br />
-            <p>kr 186,75</p>
-            <br />
-            <p>Size: 50x70</p>
+          <label class="lbl-soldout">Sold Out</label>
+          <h1>THE</h1>
+          <br />
+          <p>A nice poster.</p>
+          <br />
+          <p>kr 186,75</p>
+          <br />
+          <p>Size: 50x70</p>
         </div>
       </div>
     </div>
@@ -182,21 +154,18 @@
   <div class="shop-box-2-9">
     <div class="product-box">
       <div class="product-box-layer">
-        <!--<div class="product-box-front-layer product-box-img-2-9"></div>-->
         <div class="product-box-front-layer">
-          <img class="product-box-img-2-9" alt="produckt img" src="../../media/aspect.webp">
+          <img class="product-box-img-2-9" alt="produckt img" src="../../media/aspect.webp" />
         </div>
         <div class="product-box-back-layer">
-            <label class="lbl-soldout">Sold Out</label>
-            <h1>THE </h1>
-            <br />
-            <p>
-              A nice poster.
-            </p>
-            <br />
-            <p>kr 186,75</p>
-            <br />
-            <p>Size: 50x70</p>
+          <label class="lbl-soldout">Sold Out</label>
+          <h1>THE</h1>
+          <br />
+          <p>A nice poster.</p>
+          <br />
+          <p>kr 186,75</p>
+          <br />
+          <p>Size: 50x70</p>
         </div>
       </div>
     </div>
