--- a/app/src/scss/modules/_ecology.scss
+++ b/app/src/scss/modules/_ecology.scss
@@ -30,7 +30,7 @@
     background-attachment: scroll;
   }
   /* safari only */
-  @media not all and (min-resolution:.001dpcm) { 
+  @media not all and (min-resolution: 0.001dpcm) {
     background-attachment: scroll;
-}
+  }
 }
